--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,11 +1,3 @@
 --- 
- title: Welcome to Middleman
+ title: "unasuke.com"
 --- 
-
-.welcome
-  .logo
-    = image_tag "middleman-logo.svg"
-  h1
-    | Middleman is Running
-  p.doc
-    = link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank"
