Adjust style fot index page

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,3 +1,32 @@
 --- 
  title: "unasuke.com"
 --- 
+
+= stylesheet_link_tag :index
+
+section.main
+  .site-title
+    | unasuke.com
+section.contents
+section.links
+  ul.list-of-accounts
+    li
+      span: i.fa.fa-github
+      span
+        a.link[href="https://github.com/unasuke"]
+          | unasuke
+    li
+      span: i.fa.fa-twitter
+      span
+        a.link[href="https://twitter.com/yu_suke1994"]
+          | yu_suke1994
+    li
+      span: i.fa.fa-book
+      span
+        a.link[href="https://blog.unasuke.com"]
+          | blog.unasuke.com
+    li
+      span: i.fa.fa-tumblr
+      span
+        a.link[href="http://yusuke1994.tumblr.com/"]
+          | yusuke1994.tumblr.com
