--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -3,9 +3,10 @@ html
   head
     meta[charset="utf-8"]
     meta[content="IE=edge" http-equiv="X-UA-Compatible"]
-    meta[content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"]
+    meta[content="width=device-width,initial-scale=1.0" name="viewport"]
+    link[rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"]
     title= current_page.data.title
-    = stylesheet_link_tag :site
+    = stylesheet_link_tag :base
     = javascript_include_tag :all
   body[class="#{page_classes}"]
     = yield
