--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,10 +5,21 @@
 = stylesheet_link_tag :index
 
 section.main
-  .site-title
+  h1.site-title
     | unasuke.com
 section.contents
+  h2
+    | contents
+  ul.list-of-contents
+    li
+      a.link[href="/sponsor"]
+        | sponsor
+    li
+      a.link[href="https://blog.unasuke.com"]
+        | blog
 section.links
+  h2
+    | links
   ul.list-of-accounts
     li
       span: i.fa.fa-github
@@ -20,11 +31,6 @@ section.links
       span
         a.link[href="https://twitter.com/yu_suke1994"]
           | yu_suke1994
-    li
-      span: i.fa.fa-book
-      span
-        a.link[href="https://blog.unasuke.com"]
-          | blog.unasuke.com
     li
       span: i.fa.fa-tumblr
       span
