Add links in sponsor page

--- a/source/sponsor.html.slim
+++ b/source/sponsor.html.slim
@@ -26,3 +26,8 @@ section.sponsors
                 a.link[href="https://twitter.com/#{data["twitter"]}"]
                   = data["twitter"]
 section.link-to-sponsor
+  a.link[href="https://steers.jp/c/6b819cbcc96b6727"]
+    | I want to be a sponsor of the unasuke!
+section.link-to-index
+  a.link[href="/"]
+    | back to the index page.
