--- a/source/stylesheets/sponsor.scss
+++ b/source/stylesheets/sponsor.scss
@@ -48,6 +48,20 @@ section {
   }
 }
 
+.link-to-sponsor, .link-to-index {
+  text-align: center;
+}
+
+.link-to-sponsor {
+  margin-bottom: 50px;
+  font-size: 1.5rem;
+}
+
+.link-to-index {
+  margin-bottom: 30px;
+  font-size: 1rem;
+}
+
 .card {
   box-sizing: border-box;
   border: 1px solid #838383;
