Add link to keybase.io

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -36,3 +36,8 @@ section.links
       span
         a.link[href="http://yusuke1994.tumblr.com/"]
           | yusuke1994.tumblr.com
+    li
+      span: i.fa.fa-key
+      span
+        a.link[href="https://keybase.io/unasuke"]
+          | keybase.io/unasuke
