--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -4,7 +4,7 @@ html
     meta[charset="utf-8"]
     meta[content="IE=edge" http-equiv="X-UA-Compatible"]
     meta[content="width=device-width,initial-scale=1.0" name="viewport"]
-    link[rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"]
+    link[rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"]
     title= current_page.data.title
     = stylesheet_link_tag :base
     = javascript_include_tag :all
