Remove domain from kaybase account
- kaybase icon

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -50,4 +50,4 @@ section.links
       span: i.fab.fa-keybase
       span
         a.link[href="https://keybase.io/unasuke"]
-          | keybase.io/unasuke
+          | unasuke
