Add rel="me" to mastodon account links

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -29,12 +29,12 @@ section.links
     li
       span: i.fab.fa-mastodon
       span
-        a.link[href="https://mstdn.unasuke.com/@unasuke"]
+        a.link[href="https://mstdn.unasuke.com/@unasuke" rel="me"]
           | unasuke@mstdn.unasuke.com (primary)
     li
       span: i.fab.fa-mastodon
       span
-        a.link[href="https://mstdn.maud.io/@unasuke"]
+        a.link[href="https://mstdn.maud.io/@unasuke" rel="me"]
           | unasuke@mstdn.maud.io (secondary)
     li
       span: i.fab.fa-twitter
