Update font settings

--- a/source/stylesheets/src/_definitions.scss
+++ b/source/stylesheets/src/_definitions.scss
@@ -3,12 +3,9 @@ $main_color: #211c27;
 $background_color: #f5f1f1;
 
 // font
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
 $font_color: $main_color;
-$font-family-humanist-sans-serif: 'Open Sans','Helvetica Neue', Helvetica, 'Arial', '游ゴシック', YuGothic, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif !default;
-$font-family-sans-serif:  'Open Sans','Helvetica Neue', Helvetica, 'Arial', 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif !default;
-$font-family-serif:       'Times New Roman', Times, '游明朝体', YuMincho, 'ヒラギノ明朝 ProN W3', 'Hiragino Mincho ProN', 'ＭＳ Ｐ明朝', 'MS PMincho', 'MS 明朝', serif !default;
-$font-family-monospace:   Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
-$font-family-base:        $font-family-humanist-sans-serif !default;
+$font-family-yu: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, 'Arial', "游ゴシック体", YuGothic, "Yu Gothic Medium", "Noto Sans JP", sans-serif;
 
 // width
 $content_width_standard: 1000px;
