Fix contents in sponsor
- fix class name
- del closed service

--- a/source/sponsor.html.slim
+++ b/source/sponsor.html.slim
@@ -21,12 +21,13 @@ section.sponsors
             .name
               = data["name"]
             .account
-              span: i.fa.fa-twitter
+              span: i.fab.fa-twitter
               span
                 a.link[href="https://twitter.com/#{data["twitter"]}"]
                   = data["twitter"]
 section.link-to-sponsor
-  a.link[href="https://steers.jp/c/6b819cbcc96b6727"]
+  del
+    a.link[href="https://steers.jp/c/6b819cbcc96b6727"]
     | I want to be a sponsor of the unasuke!
 section.link-to-index
   a.link[href="/"]
