Add rel="me" to mastodon profile

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -38,7 +38,7 @@ section.index
           a(href="https://github.com/unasuke") unasuke
         li
           | Mastodon : 
-          a(href="https://mstdn.unasuke.com/@unasuke") unasuke@mstdn.unasuke.com
+          a(href="https://mstdn.unasuke.com/@unasuke" rel="me") unasuke@mstdn.unasuke.com
         li
           | Keybase.io : 
           a(href="https://keybase.io/unasuke") unasuke
