--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -23,6 +23,9 @@ section.index
           a.link[href="/sponsor"]
             | Sponsor
         li
+          a.link[href="/slides"]
+            | Slides
+        li
           a.link[href="https://blog.unasuke.com"]
             | Blog
         li
