--- a/source/slides.html.slim
+++ b/source/slides.html.slim
@@ -2,6 +2,16 @@ section
   h1 Slides
   div.slides-wrapper
     div.slide
+      <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/heiseirubykaigi-1/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/heiseirubykaigi-1/" title="heiseirubykaigi-1">heiseirubykaigi-1</a></div>
+    div.slide
+      <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-53/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-53/" title="omotesandorb #53">omotesandorb #53</a></div>
+    div.slide
+      <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-52/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-52/" title="omotesandorb #52">omotesandorb #52</a></div>
+    div.slide
+      <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-51/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-51/" title="omotesandorb #51">omotesandorb #51</a></div>
+    div.slide
+      <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/container_runtime_meetup_1/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/container_runtime_meetup_1/" title="Container Runtime Meetup #1">Container Runtime Meetup #1</a></div>
+    div.slide
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-49/viewer.html" width="320" height="285" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-49/" title="omotesandorb #49">omotesandorb #49</a></div>
     div.slide
