Update gems and add link to rubygems.org

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -21,6 +21,17 @@ section.activity
       dt: a(href="https://rubygems.org/gems/unasukecop") https://rubygems.org/gems/unasukecop
       dd 自分用RuboCop rule集
 
+      dt: a(href="https://rubygems.org/gems/redcarpet-render-html_lazy_img") https://rubygems.org/gems/redcarpet-render-html_lazy_img
+      dd RedcarpetによってMarkdownから生成されるHTMLのimgタグのloading attributeを制御するgem
+
+      dt: a(href="https://rubygems.org/gems/middleman-img_loading_attribute") https://rubygems.org/gems/middleman-img_loading_attribute
+      dd Middlemanによって生成されるHTMLimgタグのloading attributeを制御するgem
+
+    p
+      | Show all →
+      a(href="https://rubygems.org/profiles/unasuke")
+        | &nbsp;https://rubygems.org/profiles/unasuke
+
   section.oss
     h2 Open Source Software
     h3 Maintainer
