--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -128,6 +128,9 @@ section.activity
       dt: a(href="https://rails.terakoya.io/") Rails寺子屋 https://rails.terakoya.io/
       dd Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。
 
+      dt: a(href="https://killncel.club/") キリンセル https://killncel.club/
+      dd 「キリンセル」は、うなすけと蜘蛛糸まなによる同人サークルです。
+
   section.portfolios
     h2 Portfolios
     ul
