--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -45,3 +45,6 @@ section.index
         li
           | Keybase.io : 
           a(href="https://keybase.io/unasuke") unasuke
+        li
+          | note.com : 
+          a(href="https://note.com/unasuke") unasuke
