R.I.P blog.spicelife.jp

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -90,28 +90,17 @@ section.activity
       li: a(href="https://tech.bank.co.jp/entry/2018/09/18/150000") 大量のPush通知をCloud Functions経由で送信する - BANK tech blog
     h3 spice life
     ul
-      li: a(href="http://blog.spicelife.jp/entry/2017/12/05/124306") 弊社エンジニア2名が福岡Ruby会議02前夜祭でLTをしてきました - スパイスな人生
-      / https://web.archive.org/web/20190909055810/http://blog.spicelife.jp/entry/2017/12/05/124306
-      li: a(href="http://blog.spicelife.jp/entry/2017/11/24/165708") STEERSのSSL/TLS証明書をACMのDNS Validationで発行したものに差し替えました - スパイスな人生
-      / https://web.archive.org/web/20190909055736/http://blog.spicelife.jp/entry/2017/11/24/165708
-      li: a(href="http://blog.spicelife.jp/entry/2017/09/05/183605") ridgepoleのapplyをECS RunTaskで実行するようにしました - スパイスな人生
-      / https://web.archive.org/web/20190909055653/http://blog.spicelife.jp/entry/2017/09/05/183605
-      li: a(href="http://blog.spicelife.jp/entry/2017/07/06/140349") RailsアプリをECSで運用するまでにやったこと、これからしていくこと - スパイスな人生
-      / https://web.archive.org/web/20190909055609/http://blog.spicelife.jp/entry/2017/07/06/140349
-      li: a(href="http://blog.spicelife.jp/entry/2017/03/14/114041") AWS CloudWatch Eventsをcronとして使う powered by maekawa - スパイスな人生
-      / https://web.archive.org/web/20190909055239/http://blog.spicelife.jp/entry/2017/03/14/114041
-      li: a(href="http://blog.spicelife.jp/entry/2017/02/24/113544") 社全体で使うrubocop.ymlを定義して、TMIXとSTEERSに適用しました - スパイスな人生
-      / https://web.archive.org/web/20190909055326/http://blog.spicelife.jp/entry/2017/02/24/113544
-      li: a(href="http://blog.spicelife.jp/entry/2016/06/24/145823") Dockercon 2016に参加してきました - スパイスな人生
-      / https://web.archive.org/web/20190909055459/http://blog.spicelife.jp/entry/2016/06/24/145823
-      li: a(href="http://blog.spicelife.jp/entry/2016/06/16/152330") spicelifeのエンジニアは、どんな開発環境で仕事をしているの？ - スパイスな人生
-      / https://web.archive.org/web/20190909055427/http://blog.spicelife.jp/entry/2016/06/16/152330
-      li: a(href="http://blog.spicelife.jp/entry/2015/12/22/145028") TMIXのRailsを4.2.5にアップデートしました。 - スパイスな人生
-      / https://web.archive.org/web/20190909055606/http://blog.spicelife.jp/entry/2015/12/22/145028
-      li: a(href="http://blog.spicelife.jp/entry/2015/07/13/181718") 新卒がまたtmixのRailsを4.1に上げた話 - スパイスな人生
-      / https://web.archive.org/web/20190909055310/http://blog.spicelife.jp/entry/2015/07/13/181718
-      li: a(href="http://blog.spicelife.jp/entry/2015/04/20/181533") 新卒エンジニアが入社早々tmixのRailsメジャーバージョンアップをした話 - スパイスな人生
-      / https://web.archive.org/web/20190909055302/http://blog.spicelife.jp/entry/2015/04/20/181533
+      li: a(href="https://web.archive.org/web/20190909055810/http://blog.spicelife.jp/entry/2017/12/05/124306") 弊社エンジニア2名が福岡Ruby会議02前夜祭でLTをしてきました - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055736/http://blog.spicelife.jp/entry/2017/11/24/165708") STEERSのSSL/TLS証明書をACMのDNS Validationで発行したものに差し替えました - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055653/http://blog.spicelife.jp/entry/2017/09/05/183605") ridgepoleのapplyをECS RunTaskで実行するようにしました - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055609/http://blog.spicelife.jp/entry/2017/07/06/140349") RailsアプリをECSで運用するまでにやったこと、これからしていくこと - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055239/http://blog.spicelife.jp/entry/2017/03/14/114041") AWS CloudWatch Eventsをcronとして使う powered by maekawa - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055326/http://blog.spicelife.jp/entry/2017/02/24/113544") 社全体で使うrubocop.ymlを定義して、TMIXとSTEERSに適用しました - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055459/http://blog.spicelife.jp/entry/2016/06/24/145823") Dockercon 2016に参加してきました - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055427/http://blog.spicelife.jp/entry/2016/06/16/152330") spicelifeのエンジニアは、どんな開発環境で仕事をしているの？ - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055606/http://blog.spicelife.jp/entry/2015/12/22/145028") TMIXのRailsを4.2.5にアップデートしました。 - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055310/http://blog.spicelife.jp/entry/2015/07/13/181718") 新卒がまたtmixのRailsを4.1に上げた話 - スパイスな人生 (web.archive.org)
+      li: a(href="https://web.archive.org/web/20190909055302/http://blog.spicelife.jp/entry/2015/04/20/181533") 新卒エンジニアが入社早々tmixのRailsメジャーバージョンアップをした話 - スパイスな人生 (web.archive.org)
 
   section.communities
     h2 Communities
