Add talks section

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -66,6 +66,18 @@ section.activity
       li: a(href="https://github.com/mikel/mail/pull/1222")
         | Reduce warnings "mismatched indentations" on ruby 2.6 by unasuke · Pull Request #1222 · mikel/mail
 
+  section.talks
+    h2 Talks
+    dl
+      dt 2020-09-09 CloudNative Days Tokyo 2020 「OOParts - Stateless Cloud Gaming Architecture -」
+      dd
+        li: a(href="https://event.cloudnativedays.jp/cndt2020/talks/37") OOParts - Stateless Cloud Gaming Architecture - | CloudNative Days Tokyo 2020
+        li: a(href="https://note.com/unasuke/n/n0f154a1795b1") OOParts -Stateless Cloud Gaming Architecture- #CNDT2020｜うなすけ｜note
+      dt 2020-09-03 CEDEC 2020 「クラウドゲーミング最新開発事例 ～次世代のゲーム体験を追求していく～」
+      dd
+        li: a(href="https://cedec.cesa.or.jp/2020/session/detail/s5e7f9a66d0c16") CEDEC2020: クラウドゲーミング最新開発事例 ～次世代のゲーム体験を追求していく～
+        li: a(href="https://speakerdeck.com/oliver_diary/kuraudogeminguzui-xin-kai-fa-shi-li-number-cedec2020") クラウドゲーミング最新開発事例 - #CEDEC2020 - Speaker Deck
+
   section.slides
     h2 Slides
     p
