--- a/source/stylesheets/src/activity.scss
+++ b/source/stylesheets/src/activity.scss
@@ -22,7 +22,7 @@ section.activity {
   }
 }
 
-section.works, section.oss, section.communities, section.slides {
+section.works, section.oss, section.communities, section.slides, section.talks {
   margin-bottom: 3rem;
 
   @include media(max-width 320px) {
