--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -132,6 +132,9 @@ section.activity
       dt: a(href="https://killncel.club/") キリンセル https://killncel.club/
       dd 「キリンセル」は、うなすけと蜘蛛糸まなによる同人サークルです。
 
+      dt: a(href="https://kaigionrails.org/") Kaigi on Rails https://kaigionrails.org/
+      dd Kaigi on Railsのコアコンセプトは 「初学者から上級者までが楽しめるWeb系の技術カンファレンス」 です。 (as organizer)
+
   section.portfolios
     h2 Portfolios
     ul
