--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -92,14 +92,14 @@ section.activity
     h2 Articles
     h3 Bank
     ul
-      li: a(href="https://tech.bank.co.jp/entry/2019/07/29/170000") 急に外部APIとの通信が "dh key too small" で失敗するようになったのはなぜ？ - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2019/07/10/150000") 社内GPU機の構成をItamaeで管理するようにしたことと、その反省点について - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2019/04/24/150000") オフィスネットワークを刷新し、Cisco Merakiを導入しました。 - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2019/04/23/160000") RubyKaigi 2019に弊社から2人が業務扱いで参加してきました - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2018/12/06/150000") Japan Container Days v18.12 参加レポート - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2018/11/21/150000") sidekiq-cronアップデートへの道のり - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2018/10/15/150000") Google Cloud NEXT'18 in Tokyoで登壇しました - BANK tech blog
-      li: a(href="https://tech.bank.co.jp/entry/2018/09/18/150000") 大量のPush通知をCloud Functions経由で送信する - BANK tech blog
+      li: a(href="https://bankinc.hatenablog.com/entry/2019/07/29/170000") 急に外部APIとの通信が "dh key too small" で失敗するようになったのはなぜ？ - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2019/07/10/150000") 社内GPU機の構成をItamaeで管理するようにしたことと、その反省点について - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2019/04/24/150000") オフィスネットワークを刷新し、Cisco Merakiを導入しました。 - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2019/04/23/160000") RubyKaigi 2019に弊社から2人が業務扱いで参加してきました - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2018/12/06/150000") Japan Container Days v18.12 参加レポート - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2018/11/21/150000") sidekiq-cronアップデートへの道のり - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2018/10/15/150000") Google Cloud NEXT'18 in Tokyoで登壇しました - BANK tech blog (archive)
+      li: a(href="https://bankinc.hatenablog.com/entry/2018/09/18/150000") 大量のPush通知をCloud Functions経由で送信する - BANK tech blog (archive)
     h3 spice life
     ul
       li: a(href="https://web.archive.org/web/20190909055810/http://blog.spicelife.jp/entry/2017/12/05/124306") 弊社エンジニア2名が福岡Ruby会議02前夜祭でLTをしてきました - スパイスな人生 (web.archive.org)
