Add recent talks

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,6 +69,19 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2021-11-05 CloudNative Days Tokyo 2021 「なぜ我々はクラウドゲーミング基盤をKubernetesに移行したのか」
+      dd
+        li: a(href="https://event.cloudnativedays.jp/cndt2021/talks/1192") なぜ我々はクラウドゲーミング基盤をKubernetesに移行したのか | CloudNative Days Tokyo 2021
+        li: a(href="https://note.com/unasuke/n/n861b9a5f1ebb") なぜ我々はクラウドゲーミング基盤をKubernetesに移行したのか #CNDT2021｜うなすけ｜note
+      dt 2021-09-11 RubyKaigi Takeout 2021 「Ruby, Ractor, QUIC」
+      dd
+        li: a(href="https://rubykaigi.org/2021-takeout/presentations/yu_suke1994.html") Ruby, Ractor, QUIC by Yusuke Nakamura - RubyKaigi Takeout 2021
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-takeout-2021/") Ruby, Ractor, QUIC - unasuke - Rabbit Slide Show
+        li: a(href="https://blog.unasuke.com/2021/rubykaigi-takeout-2021/") RubyKaigi Takeout 2021 で発表しました | うなすけとあれこれ
+      dt 2021-06-24 Kubernetes Meetup Tokyo #42 「Agones移行物語 ～内製してたツールの上位互換がOSSになっていた～」
+      dd
+        li: a(href="https://k8sjp.connpass.com/event/214286/") Kubernetes Meetup Tokyo #42 - connpass
+        li: a(href="https://note.com/unasuke/n/neddb8af116fd") Agones移行物語 - Kubernetes Meetup Tokyo 42 #k8sjp｜うなすけ｜note
       dt 2020-09-09 CloudNative Days Tokyo 2020 「OOParts - Stateless Cloud Gaming Architecture -」
       dd
         li: a(href="https://event.cloudnativedays.jp/cndt2020/talks/37") OOParts - Stateless Cloud Gaming Architecture - | CloudNative Days Tokyo 2020
