Add name as a proifile to aboutme

--- a/source/aboutme.html.slim
+++ b/source/aboutme.html.slim
@@ -2,6 +2,11 @@
 
 section.aboutme
   h1 About me
+  section.profile
+    h2 Profile
+    dl
+      dt Name
+      dd Yusuke Nakamura (中村 勇介)
   section.skills
     h2 Skills
     ul
