--- a/source/layouts/_google_analytics.erb
+++ b/source/layouts/_google_analytics.erb
@@ -7,3 +7,12 @@
   ga('create', 'UA-78071190-1', 'auto');
   ga('send', 'pageview');
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKY561BZ0M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VKY561BZ0M');
+</script>
