--- a/source/aboutme.html.slim
+++ b/source/aboutme.html.slim
@@ -32,11 +32,15 @@ section.aboutme
           | また、構成管理ツールであるItamaeのメンテナを務めています。
           a(href="/activity") (Activity参照)
       li
-        h3 JavaScript
-        p 簡単な改修作業程度はできますが、SPAなどを新たに作成することは未経験です。
+        h3 JavaScript/TypeScript
+        p Next.jsなどのフレームワークを使用したSPAの作成ができます。
       li
         h3 CSS
-        p カンプからの作成や、改修作業程度はできますが、構造化されたstylesheetを構築した経験はありません。
+        p カンプからのLP作成や、改修作業程度はできますが、デザインそのものを行うことは苦手です。
+    h3 これまで業務で使用してきた言語等
+    ul
+      li: a(href="https://blog.unasuke.com/2021/wrap-up-my-coding/") サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ
+      li: a(href="https://blog.unasuke.com/2020/wrap-up-my-coding/") サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ
   section.socical-accounts
     h2 Social accounts
     ul
