--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,6 +69,14 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2022-09-09 RubyKaigi 2022 「Do Pure Ruby Dream of Encrypted Binary Protocol?」
+      dd
+        li: a(href="https://rubykaigi.org/2022/presentations/yu_suke1994.html") Do Pure Ruby Dream of Encrypted Binary Protocol? - RubyKaigi 2022
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-2022/") Do Pure Ruby Dream of Encrypted Binary Protocol? - unasuke - Rabbit Slide Show
+      dt 2022-05-14 TechFeed Conference 2022 「Ruby 最新動向」
+      dd
+        li: a(href="https://techfeed.io/entries/62b9e0753b597c733fba1c5b") Ruby 最新動向（うなすけ） — TechFeed Conference 2022講演より - TechFeed
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/techfeed-conference-2022/") Ruby 最新動向 - unasuke - Rabbit Slide Show
       dt 2021-11-05 CloudNative Days Tokyo 2021 「なぜ我々はクラウドゲーミング基盤をKubernetesに移行したのか」
       dd
         li: a(href="https://event.cloudnativedays.jp/cndt2021/talks/1192") なぜ我々はクラウドゲーミング基盤をKubernetesに移行したのか | CloudNative Days Tokyo 2021
