--- a/source/age.html.slim
+++ b/source/age.html.slim
@@ -1,5 +1,8 @@
 p#age(style="font-size: 20px; padding: 20px;")
 
-javascript:
-  const elem = document.getElementById('age');
-  elem.innerHTML = Math.random() * (100 - 20 + 1) + 20
+script(src="https://cdn.jsdelivr.net/npm/ruby-3_2-wasm-wasi@2.0.0/dist/browser.script.iife.js")
+script(type="text/ruby")
+  |
+    require "js"
+    age = JS.global[:document].getElementById("age")
+    age[:innerText] = rand(20.0...100.0)
