Add RubyKaigi 2023 talk

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,6 +69,10 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2023-05-12 RubyKaigi 2023 「Ruby Implementation of QUIC: Progress and Challenges」
+      dd
+        li: a(href="https://rubykaigi.org/2023/presentations/yu_suke1994.html#day2") Ruby Implementation of QUIC: Progress and Challenges - RubyKaigi 2023
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-2023/") Ruby Implementation of QUIC: Progress and Challenges - unasuke - Rabbit Slide Show
       dt 2022-09-09 RubyKaigi 2022 「Do Pure Ruby Dream of Encrypted Binary Protocol?」
       dd
         li: a(href="https://rubykaigi.org/2022/presentations/yu_suke1994.html") Do Pure Ruby Dream of Encrypted Binary Protocol? - RubyKaigi 2022
