--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,6 +69,11 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2023-08-03 CloudNative Days Fukuoka 2023 「パブリッククラウドにおけるQUIC現状確認2023年8月編」
+      dd
+        li: a(href="https://event.cloudnativedays.jp/cndf2023/talks/1890") パブリッククラウドにおけるQUIC現状確認2023年8月編 | CloudNative Days Fukuoka 2023
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-2023/") パブリッククラウドにおけるQUIC現状確認2023年8月編 - unasuke - Rabbit Slide Show
+    dl
       dt 2023-05-12 RubyKaigi 2023 「Ruby Implementation of QUIC: Progress and Challenges」
       dd
         li: a(href="https://rubykaigi.org/2023/presentations/yu_suke1994.html#day2") Ruby Implementation of QUIC: Progress and Challenges - RubyKaigi 2023
