Add rubykaigi 2023 follow up

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,11 +69,14 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2023-08-19 RubyKaigi 2023 follow up 「RubyishなQUIC実装の進捗について」
+      dd
+        li: a(href="https://rhc.connpass.com/event/288535/") RubyKaigi 2023 follow up - connpass
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-2023-followup/") RubyishなQUIC実装の進捗について - unasuke - Rabbit Slide Show
       dt 2023-08-03 CloudNative Days Fukuoka 2023 「パブリッククラウドにおけるQUIC現状確認2023年8月編」
       dd
         li: a(href="https://event.cloudnativedays.jp/cndf2023/talks/1890") パブリッククラウドにおけるQUIC現状確認2023年8月編 | CloudNative Days Fukuoka 2023
         li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-2023/") パブリッククラウドにおけるQUIC現状確認2023年8月編 - unasuke - Rabbit Slide Show
-    dl
       dt 2023-05-12 RubyKaigi 2023 「Ruby Implementation of QUIC: Progress and Challenges」
       dd
         li: a(href="https://rubykaigi.org/2023/presentations/yu_suke1994.html#day2") Ruby Implementation of QUIC: Progress and Challenges - RubyKaigi 2023
