Add ruby association activity report

--- a/source/activity.html.slim
+++ b/source/activity.html.slim
@@ -69,6 +69,10 @@ section.activity
   section.talks
     h2 Talks
     dl
+      dt 2023-08-28 Ruby Association Activity Report 「RubyによるQUICプロトコルの他言語からの移植ならびに独自実装の作成」
+      dd
+        li: a(href="https://www.ruby.or.jp/ja/news/20230831") 「Ruby Association Activity Report」開催報告
+        li: a(href="https://slide.rabbit-shocker.org/authors/unasuke/ruby-association-2022-grant-accomplishment-report/") Ruby Association 2022 grant accomplishment report - unasuke - Rabbit Slide Show
       dt 2023-08-19 RubyKaigi 2023 follow up 「RubyishなQUIC実装の進捗について」
       dd
         li: a(href="https://rhc.connpass.com/event/288535/") RubyKaigi 2023 follow up - connpass
