--- a/source/aboutme.html.slim
+++ b/source/aboutme.html.slim
@@ -39,6 +39,8 @@ section.aboutme
         p カンプからのLP作成や、改修作業程度はできますが、デザインそのものを行うことは苦手です。
     h3 これまで業務で使用してきた言語等
     ul
+      li: a(href="https://blog.unasuke.com/2023/wrap-up-my-coding/") サーバーサイドエンジニアとして2023年に使った技術と来年の目標 | うなすけとあれこれ
+      li: a(href="https://blog.unasuke.com/2022/wrap-up-my-coding/") サーバーサイドエンジニアとして2022年に使った技術と来年の目標 | うなすけとあれこれ
       li: a(href="https://blog.unasuke.com/2021/wrap-up-my-coding/") サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ
       li: a(href="https://blog.unasuke.com/2020/wrap-up-my-coding/") サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ
   section.socical-accounts
