Create page "pay to unasuke"

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -26,6 +26,9 @@ section.index
           a.link[href="/slides"]
             | Slides
         li
+          a.link[href="/pay"]
+            | Pay to unasuke
+        li
           a.link[href="https://blog.unasuke.com"]
             | Blog
         li
